Bug #17215
Unable to suspend a user that is part of a tenant
Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:
0%
Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
I am creating users with a tenant, e.g. "DB0370$mark".
When I try to suspend this user, that succeeds when the user has no buckets. However, if the user has buckets, suspending a user fails.
I'm trying to modify the user by POSTing:
/user?format=json&display-name=Mark+Schouten&generate-key=False&uid=DB0370%24dfgdfg&suspended=True&email=mark%40google.com
This fails with:
{u'Code': u'NoSuchKey', u'HostId': u'XYZ', u'RequestId': u'XYZ'}
When I try to suspend the user with radosgw-admin, I get:
root@osdnode01:~# radosgw-admin user suspend --uid=dfgdfg --tenant=DB0370 2016-09-06 10:30:16.743131 7f7083258a00 0 RGWZoneParams::create(): error creating default zone params: (17) File exists could not modify user: unable to modify user, failed to modify bucket 2016-09-06 10:30:16.842720 7f7083258a00 0 NOTICE: get_bucket_info on bucket=foobar returned err=-2, skipping bucket
foobar being the only bucket for this user.
I tried suspending a user without a tenant, that seems to work fine.
ceph -v ceph version 10.2.2 (45107e21c568dd033c2f0a3107dec8f0b0e58374)
Related issues
History
#1 Updated by Nathan Cutler over 6 years ago
- Project changed from Ceph to rgw
#2 Updated by wenjun jing about 6 years ago
#3 Updated by Abhishek Lekshmanan about 6 years ago
- Status changed from New to Fix Under Review
#4 Updated by Radoslaw Zarzynski over 5 years ago
- Related to Bug #18364: rgw: usage stats and quota are not operational for multi-tenant users added
#5 Updated by Radoslaw Zarzynski over 5 years ago
- Related to Bug #16355: radosgw-admin command, adding the tenants can not view the user usage added
#6 Updated by Radoslaw Zarzynski over 5 years ago
- Status changed from Fix Under Review to Resolved
Resolved in https://github.com/ceph/ceph/pull/13220.